project2/spl-spec/my_test/test_11912013_4.spl
float addOne(int n)
{
  return n + 1;
}
int addOne(int n)
{
  return n + 1;
}
int test_11912013_4()
{
  int k = 4;
  int r = addOne(k);
  return r;
}